--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,54 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Chaofei Yang
     - name: Languages
-      value: English, German
+      value: Chinese, English
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: Duke University, US
+      year: 2017 - 2020
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Computer Engineering
+        - Advisor: Yiran Chen and Hai Li
+        - Research Interest: Machine learning security, neuromorphic computing.
+    - title: Master
+      institution: University of Pittsburgh, US
+      year: 2014 - 2017
       description:
-        - Description 1.
-        - Description 2.
+        - Computer Engineering
+        - Advisor: Yiran Chen and Hai Li
+    - title: Bachelor
+      institution: Tsinghua University, China
+      year: 2010 - 2014
+      description:
+        - Electronic Engineering
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Scientist
+      institution: Meta
+      year: 2020 - now
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Large-scale modeling for recommendation systems.
+    - title: Software Engineer (ML) Intern
+      institution: Facebook
+      year: 2019
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - Image obfuscation synthesis and detection.
+    - title: Deep Learning Intern
+      institution: KLA-Tencor
+      year: 2018
       description:
+        - Robust CNN model for wafer entry transition signature detection.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
+- title: Skills
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <b>Programming languages</b> Python, C/C++, Matlab, Java, Shell, SQL, Verilog
+    - <b>Deep learning frameworks</b> PyTorch, Caffe2, Tensorflow, Keras
+    - <b>EDA tools</b> Cadence Virtuoso, ModelSim
