--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -14,8 +14,8 @@
       year: 2017 - 2020
       description:
         - Computer Engineering
-        - Advisor: Yiran Chen and Hai Li
-        - Research Interest: Machine learning security, neuromorphic computing.
+        - Advisor&#58; Yiran Chen and Hai Li
+        - Research Interest&#58; Machine learning security, neuromorphic computing.
     - title: Master
       institution: University of Pittsburgh, US
       year: 2014 - 2017
