--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -21,7 +21,7 @@
       year: 2014 - 2017
       description:
         - Computer Engineering
-        - Advisor: Yiran Chen and Hai Li
+        - Advisor&#58; Yiran Chen and Hai Li
     - title: Bachelor
       institution: Tsinghua University, China
       year: 2010 - 2014
